--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -2,7 +2,11 @@ name: Dependency Review
 
 on:
   schedule:
-    - cron: "0 2 * * *"  # Este cron lo ejecuta diariamente a las 2 AM UTC
+    - cron: "0 2 * * *"  # Ejecuta diariamente a las 2 AM UTC
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   dependency-review:
